{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 260,
  "lineage": "4909f0bd-a0d4-b48d-1b3b-53cef3c9dd43",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262554599984:security-group/sg-0f0b3bd917b5bd8da",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0b3bd917b5bd8da",
            "ingress": [],
            "name": "eks-nodes-sg",
            "name_prefix": "",
            "owner_id": "262554599984",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-nodes-sg"
            },
            "tags_all": {
              "Name": "eks-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-092df1a13c8cdabd7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262554599984",
            "id": "sg-0f0b3bd917b5bd8da",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networks.aws_vpc.tfg-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b9db97587353e39",
            "arn": "arn:aws:ec2:us-east-1:262554599984:elastic-ip/eipalloc-07b9db97587353e39",
            "association_id": "eipassoc-0c60d28e97a337555",
            "domain": "vpc",
            "id": "eipalloc-07b9db97587353e39",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b78a0ba93a7bffbb",
            "private_dns": "ip-10-0-1-77.ec2.internal",
            "private_ip": "10.0.1.77",
            "public_dns": "ec2-3-218-99-62.compute-1.amazonaws.com",
            "public_ip": "3.218.99.62",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262554599984:internet-gateway/igw-0d3cdad206c9cb7de",
            "id": "igw-0d3cdad206c9cb7de",
            "owner_id": "262554599984",
            "region": "us-east-1",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-092df1a13c8cdabd7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networks.aws_vpc.tfg-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b9db97587353e39",
            "association_id": "eipassoc-0c60d28e97a337555",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0c67b091ca7a556d6",
            "network_interface_id": "eni-0b78a0ba93a7bffbb",
            "private_ip": "10.0.1.77",
            "public_ip": "3.218.99.62",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d0b956d223bc50f3",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            },
            "vpc_id": "vpc-092df1a13c8cdabd7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networks.aws_eip.main",
            "module.networks.aws_internet_gateway.main",
            "module.networks.aws_subnet.public-1a",
            "module.networks.aws_vpc.tfg-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262554599984:route-table/rtb-08f90a3b790fdc376",
            "id": "rtb-08f90a3b790fdc376",
            "owner_id": "262554599984",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c67b091ca7a556d6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-092df1a13c8cdabd7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262554599984",
            "id": "rtb-08f90a3b790fdc376",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networks.aws_eip.main",
            "module.networks.aws_internet_gateway.main",
            "module.networks.aws_nat_gateway.main",
            "module.networks.aws_subnet.public-1a",
            "module.networks.aws_vpc.tfg-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262554599984:route-table/rtb-07bcc26fa80b1ef47",
            "id": "rtb-07bcc26fa80b1ef47",
            "owner_id": "262554599984",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d3cdad206c9cb7de",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-092df1a13c8cdabd7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262554599984",
            "id": "rtb-07bcc26fa80b1ef47",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networks.aws_internet_gateway.main",
            "module.networks.aws_vpc.tfg-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062f8f2486d6853b7",
            "region": "us-east-1",
            "route_table_id": "rtb-08f90a3b790fdc376",
            "subnet_id": "subnet-0c21e838181f06cc9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networks.aws_eip.main",
            "module.networks.aws_internet_gateway.main",
            "module.networks.aws_nat_gateway.main",
            "module.networks.aws_route_table.private",
            "module.networks.aws_subnet.private-1a",
            "module.networks.aws_subnet.public-1a",
            "module.networks.aws_vpc.tfg-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e160c76e0fbbb7ea",
            "region": "us-east-1",
            "route_table_id": "rtb-08f90a3b790fdc376",
            "subnet_id": "subnet-0133e5c40fdb5815e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networks.aws_eip.main",
            "module.networks.aws_internet_gateway.main",
            "module.networks.aws_nat_gateway.main",
            "module.networks.aws_route_table.private",
            "module.networks.aws_subnet.private-1b",
            "module.networks.aws_subnet.public-1a",
            "module.networks.aws_vpc.tfg-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab5c1c1ee4dfb253",
            "region": "us-east-1",
            "route_table_id": "rtb-07bcc26fa80b1ef47",
            "subnet_id": "subnet-0d0b956d223bc50f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networks.aws_internet_gateway.main",
            "module.networks.aws_route_table.public",
            "module.networks.aws_subnet.public-1a",
            "module.networks.aws_vpc.tfg-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccbe6df3ee6d1c06",
            "region": "us-east-1",
            "route_table_id": "rtb-07bcc26fa80b1ef47",
            "subnet_id": "subnet-0cb18536c0d6c0c8c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networks.aws_internet_gateway.main",
            "module.networks.aws_route_table.public",
            "module.networks.aws_subnet.public-1b",
            "module.networks.aws_vpc.tfg-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262554599984:subnet/subnet-0c21e838181f06cc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c21e838181f06cc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262554599984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-1a"
            },
            "tags_all": {
              "Name": "private-1a"
            },
            "vpc_id": "vpc-092df1a13c8cdabd7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262554599984",
            "id": "subnet-0c21e838181f06cc9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networks.aws_vpc.tfg-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262554599984:subnet/subnet-0133e5c40fdb5815e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0133e5c40fdb5815e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262554599984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-1b"
            },
            "tags_all": {
              "Name": "private-1b"
            },
            "vpc_id": "vpc-092df1a13c8cdabd7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262554599984",
            "id": "subnet-0133e5c40fdb5815e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networks.aws_vpc.tfg-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262554599984:subnet/subnet-0d0b956d223bc50f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0b956d223bc50f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262554599984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-1a"
            },
            "tags_all": {
              "Name": "public-1a"
            },
            "vpc_id": "vpc-092df1a13c8cdabd7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262554599984",
            "id": "subnet-0d0b956d223bc50f3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networks.aws_vpc.tfg-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262554599984:subnet/subnet-0cb18536c0d6c0c8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb18536c0d6c0c8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262554599984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-1b"
            },
            "tags_all": {
              "Name": "public-1b"
            },
            "vpc_id": "vpc-092df1a13c8cdabd7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262554599984",
            "id": "subnet-0cb18536c0d6c0c8c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networks.aws_vpc.tfg-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tfg-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262554599984:vpc/vpc-092df1a13c8cdabd7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dbe69d22ff20a098",
            "default_route_table_id": "rtb-06d5838e2c9856e4e",
            "default_security_group_id": "sg-09095d2f0ac91980b",
            "dhcp_options_id": "dopt-0d4bd111b9f505c45",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-092df1a13c8cdabd7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06d5838e2c9856e4e",
            "owner_id": "262554599984",
            "region": "us-east-1",
            "tags": {
              "Name": "tfg-vpc"
            },
            "tags_all": {
              "Name": "tfg-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262554599984",
            "id": "vpc-092df1a13c8cdabd7",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262554599984:security-group/sg-00e27b088e6a93cd3",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e27b088e6a93cd3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f0b3bd917b5bd8da"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "262554599984",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-092df1a13c8cdabd7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "262554599984",
            "id": "sg-00e27b088e6a93cd3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.eks.aws_security_group.eks_nodes",
            "module.networks.aws_vpc.tfg-vpc"
          ]
        }
      ]
    }
  ]
}